# r-clarify-user

./: .gitignore  README.md  README_HUMAN_GRADIO.md  app_gradio_human.py  human_loop.py  introduction.md  merge_results.py  process_dataset.py  pyproject.toml  run_all_modes.sh  test.py
data/: processed_data.json  processed_data_expanded.json  processed_data_expanded_en.json  raw_data.json
src/: eval.py  gpt_llm.py  graph.py  llm_factory.py  prompts.py  reflection.py  run.py  state.py  token_usage.py  utils.py
