[project]
name = "clarification-for-reflective-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "openai>=2.8.1",
    "tqdm>=4.67.1",
    "tiktoken>=0.12.0",
    "gradio>=6.13.0",
]
